re align/fix light through

--- a/main.css
+++ b/main.css
@@ -8,44 +8,44 @@ body {
 }
 
 .top, .bottom, .left, .right {
-  background: gray;
-  position: fixed;
+	background: gray;
+	position: fixed;
 }
 
 .left, .right {
-  top: 0; 
-  bottom: 0;
-  width: 1em;
+	top: 0; 
+	bottom: 0;
+	width: 1em;
 }
 
 .left { 
-  left: 0; 
+	left: 0; 
 }
 
 .right { 
-  right: 0; 
+	right: 0; 
 } 
 
 .top, .bottom {
-  left: 0; 
-  right: 0;
-  height: 1em;
+	left: 0; 
+	right: 0;
+	height: 1em;
 }
 
 .top { 
-  top: 0; 
+	top: 0; 
 }
 
 .bottom { 
-  bottom: 0; 
+	bottom: 0; 
 }
 
 .logo {
-  height: 20em;
+	height: 20em;
 }
 
 .logoDiv {
- margin-left: -2.2em;
+	margin-left: -2.2em;
 
 }
 
@@ -53,7 +53,7 @@ header {
 	background-color: gray;
 	text-align: center;
 	width: 19em;
-    height: 19em;
+	height: 19em;
 	border-radius: 25px;
 	margin: auto;
 	margin-top: 4em;
@@ -72,9 +72,9 @@ header h2 {
 	color: white;
 	text-align: center;
 	padding-top: 0;
-    padding-bottom: 2em;
-    margin: 0;
-    font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	padding-bottom: 2em;
+	margin: 0;
+	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
 
 }
 
@@ -86,118 +86,131 @@ header h2 {
 
 #inputForm {
 	display: flex;
-    justify-content: center;
-    margin: 2em auto;
+	justify-content: center;
+	margin: 2em auto;
 }
 
 /*@media (min-width: @screen-sm-min) {
   ##inputForm {
     max-width: 768px;
   }
-}*/
+  }*/
 
-.form-group {
-  width: 70%;
-  margin-bottom: 0;
-}
+  .form-group {
+  	width: 70%;
+  	margin-bottom: 0;
+  }
 
-.form-control:focus {
-  border-color: gray !important;
-  box-shadow: 0 1px 1px rgba(222, 216, 216, 0.075) inset, 0 0 8px rgba(222, 216, 216, 0.6) !important;
-  outline: 0 none !important;
-}
+  .form-control:focus {
+  	border-color: gray !important;
+  	box-shadow: 0 1px 1px rgba(222, 216, 216, 0.075) inset, 0 0 8px rgba(222, 216, 216, 0.6) !important;
+  	outline: 0 none !important;
+  }
 
-#typehere {
-  width: 75%;
-}
+  #typehere {
+  	width: 75%;
+  }
 
-#searchInput:-webkit-autofill {
-  box-shadow: 0 0 0 1000px white inset;
-}
+  #searchInput:-webkit-autofill {
+  	box-shadow: 0 0 0 1000px white inset;
+  }
 
 
-.form-group {
-  margin-bottom: 0;
-  height: 0;
-}
+  .form-group {
+  	margin-bottom: 0;
+  	height: 0;
+  }
 
-#add {
-	background-color: dimgray;
-	font-weight: bold;
-	border-color: dimgray;
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+  #add {
+  	background-color: dimgray;
+  	font-weight: bold;
+  	border-color: dimgray;
+  	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
   	margin-bottom: 0 !important;
-   margin-left: -15%;
-}
+  	margin-left: -15%;
+  }
 
-#add:focus {
-  border-color: gray !important;
-  box-shadow: 0 1px 1px rgba(222, 216, 216, 0.075) inset, 0 0 8px rgba(222, 216, 216, 0.6) !important;
-  outline: 0 none !important;
-  background-color: lightgray;
-}
+  #add:focus {
+  	border-color: gray !important;
+  	box-shadow: 0 1px 1px rgba(222, 216, 216, 0.075) inset, 0 0 8px rgba(222, 216, 216, 0.6) !important;
+  	outline: 0 none !important;
+  	background-color: lightgray;
+  }
 
-#add:hover {
- background-color: lightgray;
-}
+  #add:hover {
+  	background-color: lightgray;
+  }
 
-.bought {
-	text-align: center;
-	color: dimgray;
-}
+  .bought {
+  	text-align: center;
+  	color: dimgray;
+  }
 
-input[type=number] {
-	margin-left: 1em;
-	font-size: 0.9em;
-	padding-left: 8px;
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
-}
+  input[type=number] {
+  	margin-left: .4em;
+  	font-size: 0.9em;
+  	padding-left: 2px;
+  	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+  	border-radius: 7px;
+  	border: 2px solid #dadada;
+  	width: 2em;
+  }
 
-input[type=checkbox] {
-	width: 2em;
-	margin-right: 1em;
+  input[type=checkbox] {
+  	width: 1em;
+  	margin-right: 1em;
+  	border-radius: 7px;
+    border: 2px solid #dadada;
 
-}
+  }
 
 
-main ul {
-	padding: 0;
-	font-weight: bold;
-	padding-bottom: 8em;
-}
+  main ul {
+  	padding: 0;
+  	font-weight: bold;
+  	padding-bottom: 8em;
+  }
 
-main li {
-	list-style-type: none;
-	margin-top: 1.5em;
-	font-size: 2em;
-	text-align: center;
-	color: dimgray;
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+  main li {
+  	list-style-type: none;
+  	margin-top: 1.5em;
+  	font-size: 2em;
+  	text-align: center;
+  	color: dimgray;
+  	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
 
-}
+  }
 
-.trash {
-	margin-left: 1em;
-	margin-bottom: .4em !important; 
-	background-color: lightgrey !important;
-}
+  .trash {
+  	margin-left: 1em;
+  	margin-bottom: .4em !important; 
+  	background-color: lightgrey !important;
+  }
 
-.purchased { 
-	text-decoration: line-through; 
-}
-
-.socialIcons {
-    display: flex;
+  .purchased:before { 
+  	    content: " ";
+    position: absolute;
+    border: 1px solid #111;
+    width: 10em;
+    /* display: flex; */
     justify-content: center;
-    margin-bottom: 2em;
-    margin-top: -3em;
-}
+    align-items: center;
+    margin-top: 0.85em;
+    margin-left: -.5em;
+  }
 
-#gitIcon {
-  color: darkgray;
-}
+  .socialIcons {
+  	display: flex;
+  	justify-content: center;
+  	margin-bottom: 2em;
+  	margin-top: -3em;
+  }
 
-#infoIcon {
-  color: darkgray;
-}
+  #gitIcon {
+  	color: darkgray;
+  }
+
+  #infoIcon {
+  	color: darkgray;
+  }
 
